change platform type

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.9"
 services:
   database:
     image: ankane/pgvector
+    platform: linux/arm64
     ports:
       - "5432:5432"
     environment:
@@ -20,10 +21,11 @@ services:
       database:
         condition: service_healthy
     # Use the following line to use the latest version of khoj. Otherwise, it will build from source.
-    image: ghcr.io/khoj-ai/khoj:latest
+    # image: ghcr.io/khoj-ai/khoj:latest
     # Uncomment the following line to build from source. This will take a few minutes. Comment the next two lines out if you want to use the offiicial image.
-    # build:
-      # context: .
+    build:
+      context: .
+    platform: linux/arm64
     ports:
       # If changing the local port (left hand side), no other changes required.
       # If changing the remote port (right hand side),
